enableHighLevelDataSetup step in Jenkins