@@ -59,12 +59,20 @@ jacocoTestReport {
 
 // endregion
 
+task highLevelDataSetup(type: JavaExec) {
+    dependsOn classes
+    main = "benefit.HighLevelDataSetupApp"
+    classpath +=  sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: 4.12
     testCompile 'pl.pragmatists:JUnitParams:1.1.1'
     testCompile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.12.3'
     testCompile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.12.3'
     testCompile group: 'commons-io', name: 'commons-io', version: '2.8.0'
+    testCompile group: 'com.github.hmcts', name: 'befta-fw', version: '8.2.0'
 
     testRuntime 'org.glassfish:jakarta.el:3.0.3'
     testCompileOnly 'org.projectlombok:lombok:1.18.18'
